--- a/Project_1/assets/styles/_footer.css
+++ b/Project_1/assets/styles/_footer.css
@@ -47,3 +47,9 @@ footer {
 .linkedin {
   color: #5474fd;
 }
+
+@media screen and (max-width: 768px) {
+  footer {
+    padding: 20px 0 10px 0;
+  }
+}
