--- a/Project_1/assets/styles/_footer.scss
+++ b/Project_1/assets/styles/_footer.scss
@@ -54,3 +54,9 @@ footer {
 .linkedin {
     color: $base_color;
 }
+
+@media screen and(max-width:768px) {
+    footer {
+        padding: 20px 0 10px 0;
+    }
+}
