--- a/Project_1/assets/styles/_header.scss
+++ b/Project_1/assets/styles/_header.scss
@@ -12,6 +12,10 @@ header {
     width: 100%;
     margin: 0 auto;
     height: 100vh;
+
+    @media screen and(max-width:660px) {
+        background-size: cover;
+    }
 }
 
 .intro_texts {
