--- a/Project_1/assets/styles/_nav.css
+++ b/Project_1/assets/styles/_nav.css
@@ -3,6 +3,7 @@
   width: 100%;
   min-height: 80px;
   display: flex;
+  position: relative;
 }
 .header_navigation .header_navigation_container {
   max-width: 1175px;
@@ -16,6 +17,35 @@
   max-width: 186px;
   width: 100%;
   height: 20px;
+}
+
+.hamburger-menu {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  position: absolute;
+  top: 30%;
+  right: 10px;
+  z-index: 45;
+}
+.hamburger-menu .bar {
+  width: 25px;
+  height: 3px;
+  background-color: #ffffff;
+  margin: 4px 0;
+  transition: 0.4s;
+  border-radius: 4px;
+}
+
+.bar.hidden {
+  display: none;
+}
+
+.checkbtn {
+  font-size: 30px;
+  color: #ffffff;
+  cursor: pointer;
+  display: none;
 }
 
 .nav_list {
@@ -36,4 +66,60 @@
   text-decoration: underline;
   color: #E0E0E0;
   text-underline-offset: 10px;
+}
+
+.close-button {
+  display: none;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 60px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #ffffff;
+  transition: transform 0.3s ease;
+}
+.close-button:hover {
+  transform: translateY(5px);
+}
+
+@media screen and (max-width: 900px) {
+  .hamburger-menu {
+    display: flex;
+  }
+
+  .nav {
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 30%;
+    height: 100vh;
+    background-color: #5474fd;
+    padding: 20px;
+    box-shadow: -4px 0 8px rgba(0, 0, 0, 0.1);
+    z-index: 44;
+  }
+  .nav li {
+    display: flex;
+    justify-content: space-evenly;
+    align-self: center;
+  }
+
+  .nav.active {
+    display: flex;
+  }
+
+  .nav.active .close-button {
+    display: block;
+  }
+
+  .nav_list {
+    flex-direction: column;
+    gap: 50px;
+    position: relative;
+    top: 30%;
+  }
 }
