--- a/Project_1/assets/styles/_nav.scss
+++ b/Project_1/assets/styles/_nav.scss
@@ -5,6 +5,7 @@
     width: 100%;
     min-height: 80px;
     display: flex;
+    position: relative;
 
     .header_navigation_container {
         max-width: 1175px;
@@ -20,6 +21,36 @@
             height: 20px;
         }
     }
+}
+
+.hamburger-menu {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+    position: absolute;
+    top: 30%;
+    right: 10px;
+    z-index: 45;
+
+    .bar {
+        width: 25px;
+        height: 3px;
+        background-color: $primary_color;
+        margin: 4px 0;
+        transition: 0.4s;
+        border-radius: 4px;
+    }
+}
+
+.bar.hidden {
+    display: none;
+}
+
+.checkbtn {
+    font-size: 30px;
+    color: $primary-color;
+    cursor: pointer;
+    display: none;
 }
 
 .nav_list {
@@ -41,5 +72,65 @@
         text-decoration: underline;
         color: $list_hover;
         text-underline-offset: 10px;
+    }
+}
+
+.close-button {
+    display: none;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 60px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: $primary_color;
+
+    transition: transform 0.3s ease;
+
+    &:hover {
+        transform: translateY(5px);
+    }
+}
+
+@media screen and(max-width:900px) {
+    .hamburger-menu {
+        display: flex;
+    }
+
+    .nav {
+        display: none;
+        flex-direction: column;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 30%;
+        height: 100vh;
+        background-color: $base_color;
+        padding: 20px;
+        box-shadow: -4px 0 8px rgba(0, 0, 0, 0.1);
+        ;
+        z-index: 44;
+
+        li {
+            display: flex;
+            justify-content: space-evenly;
+            align-self: center;
+        }
+    }
+
+    .nav.active {
+        display: flex;
+    }
+
+    .nav.active .close-button {
+        display: block;
+    }
+
+    .nav_list {
+        flex-direction: column;
+        gap: 50px;
+        position: relative;
+        top: 30%;
     }
 }
