--- a/Project_1/assets/styles/_section.css
+++ b/Project_1/assets/styles/_section.css
@@ -383,3 +383,24 @@
     border-bottom-right-radius: 4px;
   }
 }
+@media screen and (max-width: 380px) {
+  .grand_spain_one {
+    background-size: cover;
+  }
+
+  .grand_spain_two {
+    background-size: cover;
+  }
+
+  .card {
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 20px;
+    max-width: 225px;
+    padding: 12px;
+  }
+
+  .tourist_quote {
+    width: 100%;
+  }
+}
