--- a/Project_1/assets/styles/_section.scss
+++ b/Project_1/assets/styles/_section.scss
@@ -443,3 +443,27 @@
         border-bottom-right-radius: 4px;
     }
 }
+
+@media screen and(max-width:380px) {
+    .grand_spain_one {
+        background-size: cover;
+        // height: 60vh;
+    }
+
+    .grand_spain_two {
+        background-size: cover;
+        // height: 60vh;
+    }
+
+    .card {
+        margin: 0 auto;
+        text-align: center;
+        margin-bottom: 20px;
+        max-width: 225px;
+        padding: 12px;
+    }
+
+    .tourist_quote {
+        width: 100%;
+    }
+}
