--- a/Project_1/assets/main.css
+++ b/Project_1/assets/main.css
@@ -49,7 +49,6 @@ header {
 .intro_texts {
   margin: 0 auto;
   padding-top: 264px;
-  padding-bottom: 108px;
   top: 70px;
   position: relative;
   cursor: pointer;
@@ -83,7 +82,7 @@ header {
 .search_bar i {
   position: absolute;
   top: 37%;
-  left: 82%;
+  right: 15px;
   transform: translate(-50%);
   font-size: 16px;
 }
@@ -102,15 +101,16 @@ header {
 
 .scroll {
   text-align: center;
-  margin-bottom: 134px;
 }
 .scroll h3 {
   font-size: 14px;
   line-height: 26px;
   letter-spacing: 2.8px;
+}
+.scroll a {
   transition: all 0.2s ease-in-out;
 }
-.scroll h3:hover {
+.scroll a:hover {
   transform: scale(1.3);
   text-transform: uppercase;
 }
@@ -239,7 +239,7 @@ header {
     position: fixed;
     top: 0;
     right: 0;
-    width: 30%;
+    width: 50%;
     height: 100vh;
     background-color: #5474fd;
     padding: 20px;
@@ -833,9 +833,6 @@ footer {
 }
 .grow:hover {
   transform: scale(1.5);
-}
-
-.linkedin {
   color: #5474fd;
 }
 
