--- a/Project_1/assets/styles/_header.css
+++ b/Project_1/assets/styles/_header.css
@@ -26,7 +26,6 @@ header {
 .intro_texts {
   margin: 0 auto;
   padding-top: 264px;
-  padding-bottom: 108px;
   top: 70px;
   position: relative;
   cursor: pointer;
@@ -60,7 +59,7 @@ header {
 .search_bar i {
   position: absolute;
   top: 37%;
-  left: 82%;
+  right: 15px;
   transform: translate(-50%);
   font-size: 16px;
 }
@@ -79,15 +78,16 @@ header {
 
 .scroll {
   text-align: center;
-  margin-bottom: 134px;
 }
 .scroll h3 {
   font-size: 14px;
   line-height: 26px;
   letter-spacing: 2.8px;
+}
+.scroll a {
   transition: all 0.2s ease-in-out;
 }
-.scroll h3:hover {
+.scroll a:hover {
   transform: scale(1.3);
   text-transform: uppercase;
 }
