--- a/Project_1/assets/styles/_header.scss
+++ b/Project_1/assets/styles/_header.scss
@@ -26,7 +26,6 @@ header {
 .intro_texts {
     margin: 0 auto;
     padding-top: 264px;
-    padding-bottom: 108px;
     top: 70px;
     position: relative;
     cursor: pointer;
@@ -61,7 +60,7 @@ header {
     i {
         position: absolute;
         top: 37%;
-        left: 82%;
+        right: 15px;
         transform: translate(-50%);
         font-size: 16px;
     }
@@ -82,18 +81,20 @@ header {
 
 .scroll {
     text-align: center;
-    margin-bottom: 134px;
 
     h3 {
         font-size: 14px;
         line-height: 26px;
         letter-spacing: 2.8px;
-        transition: all .2s ease-in-out;
+    }
 
-        &:hover {
-            transform: scale(1.3);
-            text-transform: uppercase;
-        }
+    a {
+        transition: all .2s ease-in-out;
+    }
+
+    a:hover {
+        transform: scale(1.3);
+        text-transform: uppercase;
     }
 
     i {
