--- a/Lesson_7/styles/main.scss
+++ b/Lesson_7/styles/main.scss
@@ -10,10 +10,10 @@ html {
 .header {
     padding: 35px 0 17px;
 
-    @media screen and (max-width:768px) {
-        width: 100%;
-        max-width: 630px;
-        margin: 0 auto
+    @media screen and(max-width:768px) {
+        width: 90%;
+        padding: 20px 0;
+        display: flex;
     }
 }
 
@@ -24,6 +24,13 @@ html {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+
+    @media screen and(max-width:768px) {
+        width: 90%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
 
@@ -71,13 +78,6 @@ ul {
     .button {
         margin-right: 12px;
     }
-
-    @media screen and (max-width:768px) {
-        max-width: 435px;
-        width: 100%;
-        margin: 0 auto;
-        padding-left: 110px;
-    }
 }
 
 .header__menu {
@@ -114,10 +114,6 @@ button {
         border: 1px solid #e4e4e4;
         background-color: #e4e4e4;
     }
-
-    @media screen and(max-width:768px) {
-        padding: 8px 15px;
-    }
 }
 
 
@@ -134,10 +130,103 @@ button {
 }
 
 @media screen and(max-width:768px) {
-    .header__buttons {
-        margin-left: 20px;
+    .header__logo {
+        margin-bottom: 10px;
     }
 }
+
+.hamburger-menu {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+    position: fixed;
+    top: 3.5%;
+    right: 8%;
+    z-index: 45;
+
+    .bar {
+        width: 25px;
+        height: 3px;
+        background-color: black;
+        margin: 4px 0;
+        transition: 0.4s;
+        border-radius: 4px;
+    }
+}
+
+.bar.hidden {
+    display: none;
+}
+
+.close-button {
+    display: none;
+    position: relative;
+    top: 0px;
+    left: 25%;
+    font-size: 60px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: black;
+
+    transition: transform 0.3s ease;
+
+    &:hover {
+        transform: translateY(5px);
+    }
+}
+
+@media screen and(max-width:900px) {
+    .hamburger-menu {
+        display: flex;
+    }
+
+    .nav {
+        display: none;
+        flex-direction: column;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 50%;
+        height: 100vh;
+        background-color: white;
+        padding: 20px;
+        box-shadow: -4px 0 8px rgba(0, 0, 0, 0.1);
+        ;
+        z-index: 44;
+        align-items: self-end;
+
+        li {
+            display: flex;
+            justify-content: space-evenly;
+            align-self: center;
+        }
+    }
+
+    .nav.active {
+        display: flex;
+    }
+
+    .nav.active .close-button {
+        display: block;
+    }
+
+    .header__menu {
+        gap: 50px;
+        position: relative;
+        top: 15%;
+        display: flex;
+        flex-direction: column;
+        right: 15%;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .nav {
+        width: 50%;
+    }
+}
+
 
 .header__buttons .button {
     margin-right: 12px;
@@ -246,9 +335,18 @@ button {
     font-size: 0;
 }
 
+
 @media screen and (max-width:768px) {
     .feature {
         padding-top: 40px;
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main_title_actions {
+        display: flex;
+        gap: 25px
     }
 }
 
@@ -380,6 +478,7 @@ h2 {
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
+        width: 90%;
 
         .column:first-child {
             width: 55%;
@@ -524,7 +623,7 @@ main {
 
 @media screen and (max-width:768px) {
     .started_button {
-        width: 120px;
+        width: 150px;
     }
 }
 
