--- a/Lesson_7/styles/main.css
+++ b/Lesson_7/styles/main.css
@@ -1,3 +1,8 @@
+@media screen and (max-width: 380px) {
+  .nav {
+    width: 50%;
+  }
+}
 body,
 html {
   font-family: "Poppins", sans-serif;
@@ -15,6 +20,7 @@ html {
     width: 90%;
     padding: 20px 0;
     display: flex;
+    margin-bottom: 20px;
   }
 }
 
@@ -31,7 +37,6 @@ html {
     width: 90%;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
   }
 }
 
@@ -154,7 +159,6 @@ button {
   display: none;
   position: relative;
   top: 0px;
-  left: 25%;
   font-size: 60px;
   background: none;
   border: none;
@@ -205,12 +209,7 @@ button {
     top: 15%;
     display: flex;
     flex-direction: column;
-    right: 15%;
-  }
-}
-@media screen and (max-width: 380px) {
-  .nav {
-    width: 50%;
+    right: 30%;
   }
 }
 .header__buttons .button {
