--- a/Lesson_7/styles/main.css
+++ b/Lesson_7/styles/main.css
@@ -1,8 +1,3 @@
-@media screen and (max-width: 380px) {
-  .nav {
-    width: 50%;
-  }
-}
 body,
 html {
   font-family: "Poppins", sans-serif;
@@ -10,6 +5,9 @@ html {
   padding: 0;
   box-sizing: border-box;
   color: #000;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 .header {
@@ -587,6 +585,7 @@ main {
   width: 100%;
   border: 1px solid #bcd0ef;
   border-radius: 4px;
+  text-align: center;
 }
 .email_sign:hover {
   border: 1px solid #ff9900;
@@ -612,4 +611,110 @@ main {
 
 .nav_item:hover {
   color: #ffa41b;
+}
+
+@media screen and (max-width: 380px) {
+  .header {
+    width: 100%;
+  }
+
+  .hamburger-menu {
+    position: fixed;
+    top: 18px;
+    right: 15px;
+    z-index: 45;
+  }
+
+  .button {
+    padding: 5px 5px;
+  }
+
+  .hero__title {
+    font-size: 24px;
+  }
+
+  .column:first-child {
+    width: 100%;
+  }
+
+  .started_button {
+    padding: 10px 10px;
+    margin-bottom: 10px;
+  }
+
+  .professional .column:first-child {
+    width: 100%;
+  }
+
+  .section_title {
+    padding-bottom: 5px;
+    font-size: 24px;
+  }
+
+  .professional .column:last-child {
+    width: 100%;
+  }
+
+  .column.managers {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .footer {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .footer_nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0px;
+  }
+
+  .footer_nav .column {
+    width: 100%;
+    text-align: center;
+  }
+
+  .footer_nav > ul {
+    margin: 5px;
+  }
+
+  .footer_nav .column li {
+    margin-bottom: 5px;
+  }
+
+  .email {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .email_sign {
+    height: 30px;
+    max-width: 200px;
+    width: 100%;
+  }
+
+  .started_button {
+    width: 120px;
+    padding: 8px 12px;
+  }
+
+  .logo_link img {
+    max-width: 120px;
+  }
+
+  main {
+    padding-bottom: 0px;
+  }
 }
