--- a/Lesson_7/styles/main.scss
+++ b/Lesson_7/styles/main.scss
@@ -1,5 +1,3 @@
-@import './media_380.scss';
-
 body,
 html {
     font-family: "Poppins", sans-serif;
@@ -7,12 +5,15 @@ html {
     padding: 0;
     box-sizing: border-box;
     color: #000;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 .header {
     padding: 35px 0 17px;
 
-    @media screen and(max-width:768px) {
+    @media screen and (max-width:768px) {
         width: 90%;
         padding: 20px 0;
         display: flex;
@@ -28,7 +29,7 @@ html {
     flex-wrap: wrap;
     justify-content: center;
 
-    @media screen and(max-width:768px) {
+    @media screen and (max-width:768px) {
         width: 90%;
         margin: 0 auto;
         display: flex;
@@ -132,7 +133,7 @@ button {
     }
 }
 
-@media screen and(max-width:768px) {
+@media screen and (max-width:768px) {
     .header__logo {
         margin-bottom: 10px;
     }
@@ -265,7 +266,7 @@ button {
     &:first-child {
         width: 45%;
 
-        @media screen and(max-width:768px) {
+        @media screen and (max-width:768px) {
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -608,6 +609,7 @@ main {
     width: 100%;
     border: 1px solid #bcd0ef;
     border-radius: 4px;
+    text-align: center;
 
     &:hover {
         border: 1px solid #ff9900
@@ -636,3 +638,5 @@ main {
 .nav_item:hover {
     color: #ffa41b;
 }
+
+@import './media_380.scss';
