--- a/Lesson_7/styles/main.css
+++ b/Lesson_7/styles/main.css
@@ -7,7 +7,6 @@ html {
   color: #000;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
 }
 
 .header {
@@ -477,7 +476,7 @@ h2 {
 .section_title {
   font-size: 36px;
   font-weight: bold;
-  width: 520px;
+  width: 100%;
   padding-bottom: 30px;
 }
 @media screen and (max-width: 768px) {
@@ -613,7 +612,7 @@ main {
   color: #ffa41b;
 }
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 480px) {
   .header {
     width: 100%;
   }
