--- a/Lesson_7/styles/main.scss
+++ b/Lesson_7/styles/main.scss
@@ -7,7 +7,7 @@ html {
     color: #000;
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
 
 .header {
@@ -502,7 +502,7 @@ h2 {
 .section_title {
     font-size: 36px;
     font-weight: bold;
-    width: 520px;
+    width: 100%;
     padding-bottom: 30px;
 
     @media screen and(max-width:768px) {
