--- a/Lesson_24/Homework/styles.css
+++ b/Lesson_24/Homework/styles.css
@@ -58,28 +58,117 @@ body {
 .search_bar {
   display: flex;
   justify-content: center;
-  margin: 50px;
+  margin: 45px;
   flex-direction: column;
 }
 .search_bar input {
+  appearance: none;
   width: 100%;
-  max-width: 450px;
-  margin: 0 auto 20px;
-  padding: 20px;
+  border: 0;
+  font-family: inherit;
+  padding: 16px 12px 12px 12px;
+  height: 60px;
   text-align: center;
-  font-size: 22px;
+  font-size: 20px;
+  font-weight: 400;
+  background: rgba(0, 0, 0, 0.02);
+  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.3);
+  color: #fff;
+  transition: all 0.15s ease;
+  text-transform: capitalize;
+}
+.search_bar input:hover {
+  background: rgba(0, 0, 0, 0.04);
+  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.5);
+}
+.search_bar input:focus {
+  background: rgba(0, 0, 0, 0.1);
   outline: none;
+  box-shadow: inset 0px 0px 1px 1px #ff1e00;
+}
+.search_bar input::placeholder {
+  color: #000;
+}
+.search_bar input:focus::placeholder {
+  color: #000;
+  opacity: 0.6;
+}
+.search_bar input:focus + .label_focus {
+  transform: scaleX(1);
+  transition: all 0.1s ease;
 }
 .search_bar button {
+  display: inline-block;
   width: 100%;
-  max-width: 100px;
+  max-width: 200px;
   margin: 0 auto;
-  padding: 10px;
-  border-radius: 4px;
+  padding: 12px 20px;
+  border-radius: 50px;
   border: none;
+  color: #000;
+  text-transform: uppercase;
+  font-size: 16px;
+  letter-spacing: 3.5px;
+  font-family: inherit;
+  transition: all 0.3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+.search_bar button:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #e8491d;
+  border-radius: 10rem;
+  z-index: -2;
+}
+.search_bar button:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background-color: #a73211;
+  transition: all 0.3s;
+  border-radius: 10rem;
+  z-index: -1;
+}
+.search_bar button:hover {
+  color: #fff;
+}
+.search_bar button:hover:before {
+  width: 100%;
+}
+
+.city_search {
+  position: relative;
+  margin: auto auto 20px;
+  width: 100%;
+  max-width: 350px;
+  border-radius: 3px;
+  overflow: hidden;
+}
+
+.label_focus {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0.5;
+  z-index: -1;
+  transform: scaleX(0);
+  transform-origin: left;
 }
 
 .weather_card {
+  display: flex;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -89,6 +178,55 @@ body {
   border-radius: 10px;
   text-align: center;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-  width: 450px;
+  max-width: 450px;
+  width: 100%;
   display: none;
+  margin-top: 45px;
+}
+.weather_card img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  mix-blend-mode: difference;
+}
+
+.weather_elements {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.cityName {
+  font-size: 24px;
+  font-weight: bold;
+  color: #e0b6b6;
+  text-transform: capitalize;
+}
+
+.temperature {
+  font-size: 36px;
+  font-weight: bold;
+  color: #ffc5c5;
+  margin: 10px 0;
+}
+
+.conditions {
+  font-size: 18px;
+  margin: 5px 0;
+  color: #e0b6b6;
+  text-transform: capitalize;
+}
+
+.bottom_tier {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-left: 30px;
+}
+.bottom_tier .feelslike,
+.bottom_tier .humidity,
+.bottom_tier .max_temp,
+.bottom_tier .min_temp {
+  font-size: 16px;
+  margin: 5px 0;
+  color: #727fc6;
 }
