--- a/Project_2/assets/styles/_base.css
+++ b/Project_2/assets/styles/_base.css
@@ -6,4 +6,20 @@
 
 body {
   font-family: "Montserrat", serif;
+  color: #fff;
+}
+
+.container {
+  margin: 0 auto;
+  width: 100%;
+  height: 100vh;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul {
+  list-style: none;
 }
