--- a/Project_2/assets/styles/_base.scss
+++ b/Project_2/assets/styles/_base.scss
@@ -9,4 +9,20 @@
 body {
     font-family: "Montserrat",
         serif;
+    color: $primary-color;
+}
+
+.container {
+    margin: 0 auto;
+    width: 100%;
+    height: 100vh;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul {
+    list-style: none;
 }
