--- a/Project_2/assets/styles/_nav.css
+++ b/Project_2/assets/styles/_nav.css
@@ -1,3 +1,29 @@
 nav {
   font-family: "Source Sans 3", serif;
+  max-width: 515px;
+  height: 18px;
+  width: 100%;
+}
+nav .header_menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav a {
+  display: flex;
+  align-items: baseline;
+  cursor: pointer;
+}
+nav li {
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 14px;
+  align-items: center;
+}
+nav .list_dot_icon {
+  border: 1px solid #fff;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  margin-right: 14px;
 }
