display change for the clock faces

--- a/Lesson_26/main.css
+++ b/Lesson_26/main.css
@@ -150,10 +150,11 @@ button:hover:before {
 
 #clock_wall {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  flex-direction: column;
   gap: 20px;
+  align-items: flex-start;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .clock {
