--- a/Project_2/assets/styles/_header.css
+++ b/Project_2/assets/styles/_header.css
@@ -23,3 +23,39 @@ header {
   width: 100%;
   margin-right: 144px;
 }
+
+.header_body {
+  width: 100%;
+  max-width: 917px;
+  margin: 223px 127px 0;
+}
+.header_body .slider_heading {
+  text-align: center;
+  display: flex !important;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.header_body .slider_heading h2 {
+  font-weight: bold;
+  font-size: 80px;
+  letter-spacing: 10%;
+  margin-bottom: 20px;
+  min-height: 98px;
+}
+.header_body .slider_heading h3 {
+  font-weight: 400;
+  letter-spacing: 30%;
+  font-size: 18px;
+  min-height: 22px;
+}
+.header_body .slider_heading .slick-dots {
+  position: fixed !important;
+  top: 50% !important;
+  right: 20px !important;
+  transform: translateY(-50%);
+  display: flex !important;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+}
