--- a/Project_2/assets/styles/_vars.scss
+++ b/Project_2/assets/styles/_vars.scss
@@ -2,6 +2,7 @@ $primary-color:#fff;
 $secondary-color:#2C4058;
 $tertiary-color:#55B7FF;
 $commerce_background:#7E5AFF;
+$hover_color:#d00000;
 $font_size_1:14px;
 $font_size_2:15px;
 $font_size_3:18px;
