--- a/Project_2/assets/styles/_header.scss
+++ b/Project_2/assets/styles/_header.scss
@@ -18,6 +18,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 auto;
 }
 
 .header_logo {
@@ -30,6 +31,7 @@ header {
     width: 100%;
     max-width: 917px;
     margin: 223px 127px 0;
+    position: relative;
 
     .slider_heading {
         text-align: center;
@@ -51,17 +53,75 @@ header {
             letter-spacing: 30%;
             font-size: $font_size_3;
             min-height: 22px;
+            margin-bottom: 240px;
+        }
+    }
+}
+
+.slick-dots {
+    position: fixed;
+    top: 55%;
+    right: 25px;
+    transform: translateY(-50%);
+    display: flex !important;
+    flex-direction: column;
+    padding: 0;
+    margin: 0 15px 0 0;
+
+
+    li {
+        list-style: none;
+        margin: 10px 0;
+
+        button {
+            border-radius: 50%;
+            width: 10px;
+            height: 10px;
+            border: 2px solid $primary-color;
+            background-color: transparent;
+            text-indent: -9999px;
+            outline: none;
+            transition: background-color 0.3s ease;
+        }
+    }
+}
+
+.slick-dots button:hover,
+.slick-dots .slick-active button {
+    background-color: $primary-color;
+}
+
+.pointer_down {
+    a {
+        text-decoration: none;
+        border-radius: 50%;
+        border: 1px solid $primary-color;
+        position: relative;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+
+        &:hover {
+            background: $primary-color;
+            border-color: $primary-color;
+            transform: scale(1.15);
+            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.6);
+            animation: bounce 0.4s ease-in-out;
+
+            i {
+                color: #0077FF;
+                transform: scale(1.3);
+            }
         }
 
-        .slick-dots {
-            position: fixed !important;
-            top: 50% !important;
-            right: 20px !important;
-            transform: translateY(-50%);
-            display: flex !important;
-            flex-direction: column;
-            padding: 0;
-            margin: 0;
+        i {
+            position: absolute;
+            top: 32%;
+            left: 32%;
+            font-size: $font_size_2;
         }
     }
 }
