--- a/Project_2/assets/styles/main.css
+++ b/Project_2/assets/styles/main.css
@@ -42,6 +42,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 0 auto;
 }
 
 .header_logo {
@@ -54,6 +55,7 @@ header {
   width: 100%;
   max-width: 917px;
   margin: 223px 127px 0;
+  position: relative;
 }
 .header_body .slider_heading {
   text-align: center;
@@ -74,23 +76,74 @@ header {
   letter-spacing: 30%;
   font-size: 18px;
   min-height: 22px;
+  margin-bottom: 240px;
 }
-.header_body .slider_heading .slick-dots {
-  position: fixed !important;
-  top: 50% !important;
-  right: 20px !important;
+
+.slick-dots {
+  position: fixed;
+  top: 55%;
+  right: 25px;
   transform: translateY(-50%);
   display: flex !important;
   flex-direction: column;
   padding: 0;
-  margin: 0;
+  margin: 0 15px 0 0;
+}
+.slick-dots li {
+  list-style: none;
+  margin: 10px 0;
+}
+.slick-dots li button {
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  border: 2px solid #fff;
+  background-color: transparent;
+  text-indent: -9999px;
+  outline: none;
+  transition: background-color 0.3s ease;
+}
+
+.slick-dots button:hover,
+.slick-dots .slick-active button {
+  background-color: #fff;
+}
+
+.pointer_down a {
+  text-decoration: none;
+  border-radius: 50%;
+  border: 1px solid #fff;
+  position: relative;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+.pointer_down a:hover {
+  background: #fff;
+  border-color: #fff;
+  transform: scale(1.15);
+  box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.6);
+  animation: bounce 0.4s ease-in-out;
+}
+.pointer_down a:hover i {
+  color: #0077FF;
+  transform: scale(1.3);
+}
+.pointer_down a i {
+  position: absolute;
+  top: 32%;
+  left: 32%;
+  font-size: 15px;
 }
 
 nav {
   font-family: "Source Sans 3", serif;
   max-width: 515px;
   height: 18px;
-  width: 90%;
+  width: 100%;
 }
 nav .header_menu {
   display: flex;
@@ -198,4 +251,52 @@ nav li:hover a::before {
   100% {
     transform: scale(1.15);
   }
+}
+.what_we_do {
+  background-color: #fff;
+  width: 100%;
+  height: 1367px;
+}
+
+.what_we_do_title {
+  width: 100%;
+  max-width: 324px;
+  height: 84px;
+  margin: 0 auto;
+}
+.what_we_do_title hr {
+  border: 0;
+  height: 1px;
+  background-color: #2C4058;
+  width: 100px;
+  display: block;
+  margin: 99px auto 0;
+}
+.what_we_do_title h2 {
+  font-size: 44px;
+  font-weight: bold;
+  text-align: center;
+  color: #2C4058;
+  margin-top: 30px;
+  text-transform: uppercase;
+}
+
+.projects {
+  margin-top: 89px;
+}
+
+.project_1,
+.project_2 {
+  width: 100%;
+  max-width: 1385px;
+  height: 527px;
+}
+
+.project_1 {
+  margin-right: 215px;
+  margin-bottom: 140px;
+}
+
+.project_2 {
+  margin-left: 215px;
 }
